--- a/1-Ramp up/4-Funciones/Funciones.ipynb
+++ b/1-Ramp up/4-Funciones/Funciones.ipynb
@@ -52,11 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Vamos a crear un conversor de km a millas"
+    "# Vamos a crear un conversor de km a millas\n",
+    "\n",
+    "def km_millas(distancia):\n",
+    "    millas = distancia * 0.62\n",
+    "    return millas"
    ]
   },
   {
@@ -68,10 +72,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.24\n",
+      "3.1\n",
+      "6.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ahora ejecutamos la funcion\n",
+    "print(km_millas(2))\n",
+    "print(km_millas(5))\n",
+    "print(km_millas(10))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,10 +101,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12:49:47.784148\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def que_hora_es():\n",
+    "    now = datetime.now().time()\n",
+    "    return now\n",
+    "\n",
+    "# datetime.now() \n",
+    "\n",
+    "\n",
+    "mi_resultado_de_la_funcion = que_hora_es()\n",
+    "\n",
+    "print(mi_resultado_de_la_funcion) # que_hora_es() ---> me devuelve lo que tenga el return\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +136,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12:49:19.888733\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "# Fijte que hay dos prints, por eso sale el output de la hora, y el output de la funcion (None)\n",
+    "def que_hora_es():\n",
+    "    \n",
+    "    print(datetime.now().time())\n",
+    "    \n",
+    "\n",
+    "print(que_hora_es())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,10 +169,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(datetime.time(12, 51, 28, 989105), datetime.date(2022, 4, 22))\n"
+     ]
+    }
+   ],
+   "source": [
+    "def que_hora_es():\n",
+    "    time = datetime.now().time()\n",
+    "    date = datetime.now().date()\n",
+    "    return time, date \n",
+    "\n",
+    "print(que_hora_es())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,10 +199,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "<class 'list'>\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def recibe_mix(tupla, lista, diccionario):\n",
+    "    print(type(tupla))\n",
+    "    print(type(lista))\n",
+    "    print(type(diccionario))\n",
+    "    \n",
+    "recibe_mix((2,3,4), ['a', 'b', 'c'], {\"X1\": 1, \"X2\": 2})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,12 +236,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.24\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'millas' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25296/1298168065.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkm_millas\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmillas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'millas' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Todo lo que declaremos dentro de la función se crea UNICAMENTE para la función\n",
-    "# Fuera de la misma, esas variables no existen"
+    "# Fuera de la misma, esas variables no existen\n",
+    "\n",
+    "def km_millas(distancia):\n",
+    "    millas = distancia * 0.62\n",
+    "    return millas\n",
+    "\n",
+    "print(km_millas(2))\n",
+    "\n",
+    "print(millas)"
    ]
   },
   {
@@ -162,9 +280,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def numero_ifs(numero):\n",
     "    if numero == 1:\n",
@@ -180,18 +309,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'out' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25296/3414726539.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnumero_ifs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25296/1207955043.py\u001b[0m in \u001b[0;36mnumero_ifs\u001b[1;34m(numero)\u001b[0m\n\u001b[0;32m      6\u001b[0m                     \u001b[0mout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mnumero_ifs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'out' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "numero_ifs(2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "km_millas() missing 1 required positional argument: 'distancia'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25296/337066916.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmillas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkm_millas\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: km_millas() missing 1 required positional argument: 'distancia'"
+     ]
+    }
+   ],
    "source": [
-    "# Si no introducimos argumentos en una función que SI tiene argumentos, salta un error de este estilo"
+    "# Si no introducimos argumentos en una función que SI tiene argumentos, salta un error de este estilo\n",
+    "\n",
+    "def km_millas(distancia):\n",
+    "    millas = distancia * 0.62\n",
+    "    return millas\n",
+    "\n",
+    "print(km_millas())"
    ]
   },
   {
@@ -218,10 +380,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hoy salimos'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def excur_montania(tiempo, amigos):\n",
+    "    if tiempo == True and len(amigos) > 1:\n",
+    "        return amigos[0]\n",
+    "    elif tiempo == True:\n",
+    "        return \"Hoy salimos\"\n",
+    "    else:\n",
+    "        return \"No podemo salir\"\n",
+    "\n",
+    "excur_montania(True, [\"Pepe\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pepe'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def excur_montania(tiempo, amigos):\n",
+    "    \n",
+    "    if tiempo == True:\n",
+    "        if len(amigos) > 1:\n",
+    "            return amigos[0]\n",
+    "        else:\n",
+    "            return \"Dani\"\n",
+    "\n",
+    "    else:\n",
+    "        return \"No podemos ir\"\n",
+    "    \n",
+    "excur_montania(True, [\"Pepe\", \"Juan\"])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,10 +450,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiplica(x1, x2, x3, x4):\n",
+    "    return (x1 * x2 * x3) / x4\n",
+    "\n",
+    "multiplica(4,6,7,2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,10 +480,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiplica(x2 = 6, # Aqui pongo x2\n",
+    "            x1 = 4, # Y aqui x1\n",
+    "            x3 = 7,\n",
+    "            x4 = 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,10 +516,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15280/1596951458.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m             \u001b[0mx1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;31m# Y aqui x1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m             \u001b[0mx3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m             x2 = 6)\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15280/1077904274.py\u001b[0m in \u001b[0;36mmultiplica\u001b[1;34m(x1, x2, x3, x4)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mmultiplica\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mx1\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mx2\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mx3\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mx4\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmultiplica\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "multiplica(x4 = 0, # Aqui pongo x2\n",
+    "            x1 = 4, # Y aqui x1\n",
+    "            x3 = 7,\n",
+    "            x2 = 6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -284,10 +548,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'ZeroDivisionError'>\n",
+      "Ha habido un error en la funcion multipl\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    multiplica(x4 = 0, # Aqui pongo x2\n",
+    "        x1 = 4, # Y aqui x1\n",
+    "        x3 = 7,\n",
+    "        x2 = 6)\n",
+    "except ZeroDivisionError:\n",
+    "    print(ZeroDivisionError)\n",
+    "    print(\"Ha habido un error en la funcion multipl\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -301,10 +583,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "30\n",
+      "<class 'tuple'>\n",
+      "1260\n",
+      "<class 'tuple'>\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def multipl_var(*args):\n",
+    "    print(type(args))\n",
+    "    mult_tot = 1\n",
+    "    \n",
+    "    for i in args:\n",
+    "        mult_tot = mult_tot * i\n",
+    "        \n",
+    "    return mult_tot\n",
+    "\n",
+    "# Llamamos a la funcion\n",
+    "print(multipl_var(2, 5, 3))\n",
+    "print(multipl_var(2, 5, 3, 6, 7))\n",
+    "print(multipl_var(2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -317,11 +627,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# En este ejemplo, uso el ultimo argumento para dividir todo lo que habiamos multiplicado por este argumento\n"
+    "# En este ejemplo, uso el ultimo argumento para dividir todo lo que habiamos multiplicado por este argumento\n",
+    "# En este ejemplo, uso el ultimo argumento para dividir todo lo que habiamos multiplicado por este argumento\n",
+    "def multipl_var_div(*args, div):\n",
+    "    \n",
+    "    mult_tot = 1\n",
+    "    \n",
+    "    for i in args:\n",
+    "        mult_tot = mult_tot * i\n",
+    "        \n",
+    "    return mult_tot/div\n",
+    "\n",
+    "print(multipl_var_div(2, 5, 3, div = 10))"
    ]
   },
   {
@@ -346,10 +675,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "multipl_var_div() missing 1 required keyword-only argument: 'div'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15280/3145932291.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmultipl_var_div\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: multipl_var_div() missing 1 required keyword-only argument: 'div'"
+     ]
+    }
+   ],
+   "source": [
+    "print(multipl_var_div(2, 5, 3, 10))"
+   ]
   },
   {
    "cell_type": "markdown",
