--- a/1-Ramp up/4-Funciones/Funciones.ipynb
+++ b/1-Ramp up/4-Funciones/Funciones.ipynb
@@ -710,17 +710,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mazda,\n",
+      "Mazda,BMW,\n",
+      "Mazda,BMW,VW,\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Mazda,BMW,VW'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def marcas_coche(*marcas):\n",
+    "def marcas_coche(*marcas): # marcas = (\"Mazda\", \"BMW\", \"VW\")   marcas = (\"Seat\", \"Mazda\")\n",
     "    tot = ''\n",
     "    for marca in marcas:\n",
     "        tot = tot + marca + ','\n",
+    "        print(tot)\n",
+    "\n",
     "    return tot[:-1]\n",
     "\n",
-    "marcas_coche(\"Mazda\", \"BMW\", \"VW\")"
+    "marcas_coche(\"Mazda\", \"BMW\", \"VW\")  #  marcas = (\"Mazda\", \"BMW\", \"VW\")\n",
+    "\n",
+    "marcas_coche(\"Seat\", \"Mazda\") # marcas = (\"Seat\", \"Mazda\")\n",
+    "marcas_coche(\"Seat\") # marcas = (\"Seat\",)\n",
+    "\n",
+    "print(\"hola\")\n",
+    "print(\"lalala\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ejemplo(lista1, tupla1):\n",
+    "\n",
+    "    for elemento_lista in lista1:  # lista1 = [1,2,3,4]\n",
+    "        print(elemento_lista)\n",
+    "\n",
+    "    for elemento_tupla in tupla1: # tupla1 = (6,7,8,9)\n",
+    "        print(elemento_tupla)\n",
+    "\n",
+    "ejemplo([1,2,3], (6,7,8))\n",
+    "ejemplo([1,2,3,4], (6,7,8,9))"
    ]
   },
   {
@@ -733,10 +792,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "Camara = 24MPx\n",
+      "Bateria = 10\n",
+      "Peso = 200\n",
+      "{'Camara': '24MPx', 'Bateria': 10, 'Peso': 200}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def movil(**kwargs):\n",
+    "    \n",
+    "    print(type(kwargs))\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(key, \"=\", value)\n",
+    "        \n",
+    "    return kwargs\n",
+    "\n",
+    "# Llamamos a la funcion\n",
+    "print(movil(Camara = \"24MPx\",\n",
+    "           Bateria = 10,\n",
+    "           Peso = 200))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -748,10 +832,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tipo de args: <class 'tuple'>\n",
+      "Movil bueno\n",
+      "Le dure la bateria\n",
+      "Tipo de kwargs: <class 'dict'>\n",
+      "Camara = 24MPx\n",
+      "Bateria = 10\n",
+      "Peso = 200\n",
+      "{'Camara': '24MPx', 'Bateria': 10, 'Peso': 200}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def movil(*args,**kwargs):\n",
+    "    \n",
+    "    print(\"Tipo de args:\", type(args))\n",
+    "    for i in args:\n",
+    "        print(i)\n",
+    "        \n",
+    "        \n",
+    "    print(\"Tipo de kwargs:\", type(kwargs))\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(key, \"=\", value)\n",
+    "        \n",
+    "    return kwargs\n",
+    "\n",
+    "# Llamamos a la funcion\n",
+    "print(movil(\n",
+    "        \"Movil bueno\",\n",
+    "        \"Le dure la bateria\",\n",
+    "        Camara = \"24MPx\",\n",
+    "        Bateria = 10,\n",
+    "        Peso = 200\n",
+    "    ))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -765,10 +886,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Su pedido AAA se entregará el 20-07-2020\n",
+      "Contacte con Att. Cliente\n"
+     ]
+    }
+   ],
+   "source": [
+    "def venta_online(pedido, fecha_entrega, incidencia = False):\n",
+    "    \n",
+    "    if(incidencia):\n",
+    "        print(\"Contacte con Att. Cliente\")\n",
+    "        \n",
+    "    else:\n",
+    "        print(\"Su pedido\", pedido, \"se entregará el\", fecha_entrega)\n",
+    "        \n",
+    "venta_online(\"AAA\", \"20-07-2020\")\n",
+    "venta_online(\"AAA\", \"20-07-2020\", True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -785,10 +926,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "non-default argument follows default argument (Temp/ipykernel_15280/3733219502.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Admin\\AppData\\Local\\Temp/ipykernel_15280/3733219502.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    def venta_online(pedido, incidencia = False, fecha_entrega):\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m non-default argument follows default argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "def venta_online(pedido, incidencia = False, fecha_entrega):\n",
+    "    \n",
+    "    if(incidencia):\n",
+    "        print(\"Contacte con Att. Cliente\")\n",
+    "        \n",
+    "    else:\n",
+    "        print(\"Su pedido\", pedido, \"se entregará el\", fecha_entrega)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -802,20 +960,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Lo podriamos calcular con un bucle\n"
+    "# Lo podriamos calcular con un bucle\n",
+    "num_factorial = 3\n",
+    "\n",
+    "output = 1\n",
+    "for i in range(num_factorial):\n",
+    "    output = output * (i + 1)\n",
+    "    print(i + 1)\n",
+    "print(output)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El factorial de 3 es 6\n"
+     ]
+    }
+   ],
    "source": [
-    "# O mediante una funcion recursiva\n"
+    "# O mediante una funcion recursiva\n",
+    "def factorial(x):\n",
+    "    if x == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return (x * factorial(x-1))\n",
+    "\n",
+    "\n",
+    "num_factorial = 3\n",
+    "print(\"El factorial de\", num_factorial, \"es\", factorial(num_factorial ))"
    ]
   },
   {
@@ -841,10 +1034,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empieza la funcion\n",
+      "4\n",
+      "\n",
+      "    Funcion que multiplca los dos argumentos: x*y\n",
+      "    Inputs:\n",
+      "        x: float\n",
+      "        y: float\n",
+      "    \n",
+      "    Output:\n",
+      "        x * y: float\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiplica(x,y):\n",
+    "    \"\"\"\n",
+    "    Funcion que multiplca los dos argumentos: x*y\n",
+    "    Inputs:\n",
+    "        x: float\n",
+    "        y: float\n",
+    "    \n",
+    "    Output:\n",
+    "        x * y: float\n",
+    "    \"\"\"\n",
+    "    print(\"Empieza la funcion\")\n",
+    "    # Mas comentarios\n",
+    "    \n",
+    "    return x*y\n",
+    "\n",
+    "print(multiplica(2,2))\n",
+    "print(multiplica.__doc__)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -865,9 +1094,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.24\n",
+      "3.1\n",
+      "6.2\n",
+      "<class 'tuple'>\n",
+      "<class 'dict'>\n",
+      "Camara = 24MPx\n",
+      "Bateria = 10\n",
+      "Peso = 200\n",
+      "{'Camara': '24MPx', 'Bateria': 10, 'Peso': 200}\n",
+      "Su pedido AAA se entregará el 20-07-2020\n",
+      "Contacte con Att. Cliente\n",
+      "Empieza la funcion\n",
+      "4\n",
+      "\n",
+      "    Funcion que multiplca los dos argumentos: x*y\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
     "# Una funcion tiene la siguiente sintaxis\n",
     "def km_millas(distancia):\n",
