--- a/1-Ramp up/2-Flujos de control/Ejercicios Flujos de Control.ipynb
+++ b/1-Ramp up/2-Flujos de control/Ejercicios Flujos de Control.ipynb
@@ -30,10 +30,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Descansando\n"
+     ]
+    }
+   ],
+   "source": [
+    "hora = 23\n",
+    "\n",
+    "if hora >= 0 and hora <= 8:\n",
+    "    print(\"Durmiendo\")\n",
+    "    \n",
+    "elif hora >= 9 and hora <= 18:\n",
+    "    print(\"Trabajando\")\n",
+    "    \n",
+    "elif  hora >= 19 and hora <= 21:\n",
+    "    print(\"Clase\")\n",
+    "    \n",
+    "elif hora >= 22 and hora <= 24:\n",
+    "    print(\"Descansando\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Transporte o error\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,10 +81,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "superficie = 101\n",
+    "distrito = \"Moncloa\"\n",
+    "\n",
+    "if (distrito == \"Moncloa\" or distrito == \"Centro\") and superficie > 100:\n",
+    "    print(1000)\n",
+    "    \n",
+    "elif distrito == \"Salamanca\" and superficie > 150:\n",
+    "    print(1500)\n",
+    "    \n",
+    "elif distrito != \"Retiro\" and (superficie >= 60 and superficie <= 80):\n",
+    "    print(600)\n",
+    "    \n",
+    "else:\n",
+    "    print(0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,10 +124,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distrito Retiro\n",
+      "500\n"
+     ]
+    }
+   ],
+   "source": [
+    "superficie = 100\n",
+    "distrito = \"Retiro\"\n",
+    "\n",
+    "if distrito == \"Retiro\":\n",
+    "    print(\"Distrito Retiro\")\n",
+    "    \n",
+    "    if superficie > 100:\n",
+    "        print(1000)\n",
+    "        \n",
+    "    else:\n",
+    "        print(500)\n",
+    "\n",
+    "else:\n",
+    "    print(\"Otro distrito\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,10 +163,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 2\n",
+    "lista_num = range(1, 5)\n",
+    "\n",
+    "for i in lista_num:\n",
+    "    print(n*i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +195,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-10\n",
+      "-9\n",
+      "-8\n",
+      "-7\n",
+      "-6\n",
+      "-5\n",
+      "-4\n",
+      "-3\n",
+      "-2\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(-10, 0, 1):\n",
+    "    print(num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,10 +234,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "55\n",
+      "75\n",
+      "150\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [12, 15, 32, 42, 55, 75, 122, 132, 150, 180, 200]\n",
+    "for item in list1:\n",
+    "    if (item > 150):\n",
+    "        break\n",
+    "\n",
+    "    if (item % 5 == 0):\n",
+    "        print(item)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,10 +268,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "175\n",
+      "210\n",
+      "245\n",
+      "280\n",
+      "315\n",
+      "350\n"
+     ]
+    }
+   ],
+   "source": [
+    "nl=[]\n",
+    "for x in range(150, 351):\n",
+    "    if (x%5==0) and (x%7==0):\n",
+    "        print(x)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,10 +314,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 4 3 2 1 \n",
+      "4 3 2 1 \n",
+      "3 2 1 \n",
+      "2 1 \n",
+      "1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "rango=range(5, 0, -1)\n",
+    "lista=list(rango)\n",
+    "longitud=len(lista)\n",
+    "while longitud > 0:\n",
+    "    for n in lista:\n",
+    "        print(n,end=' ')\n",
+    "    print()\n",
+    "    lista.pop(0)\n",
+    "    longitud=longitud-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 4 3 2 1 \n",
+      "4 3 2 1 \n",
+      "3 2 1 \n",
+      "2 1 \n",
+      "1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "altura = 5\n",
+    "for fila in range(altura, 0, -1):\n",
+    "    for columna in range(fila, 0, -1):\n",
+    "        print(columna, end = \" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 4 3 2 1 \n",
+      "4 3 2 1 \n",
+      "3 2 1 \n",
+      "2 1 \n",
+      "1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "k = 5\n",
+    "for i in range(0,n):\n",
+    "\n",
+    "    for j in range(k-i, 0, -1):\n",
+    "        print(j, end=' ')  # print(\"hola\", \"lalala\", end = \"\\n\", sep = \" \")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +425,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Numero de vidas\n",
+    "guesses_left = 2\n",
+    "\n",
+    "while guesses_left>0:\n",
+    "    guess=int(input(\"Enter your guess:\"))\n",
+    "    \n",
+    "    if guess==random_number:\n",
+    "        print(\"You win\")\n",
+    "        break\n",
+    "    guesses_left-=1  # vidas = vidas - 1      vidas -= 1\n",
+    "else:\n",
+    "    print(\"You lose\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
