--- a/1-Ramp up/2-Flujos de control/Ejercicios bucles.ipynb
+++ b/1-Ramp up/2-Flujos de control/Ejercicios bucles.ipynb
@@ -22,22 +22,67 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "Unable to start Kernel 'Python 3.7.4 64-bit' due to connection timeout. \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "lista_1= [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
+    "lista_2 = lista_1.copy()\n",
+    "for word in lista_2:\n",
+    "    if word == \"VW\":\n",
+    "        lista_2.remove('VW')\n",
+    "print(lista_2)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_1 = [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
+    "\n",
+    "result = []\n",
+    "\n",
+    "for i in ejer_1:\n",
+    "    if i != \"VW\":\n",
+    "        result.append(i)\n",
+    "        \n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_1 = [\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\"]\n",
+    "\n",
+    "result = []\n",
+    "i = 0\n",
+    "\n",
+    "while i < len(ejer_1):\n",
+    "    print(i)\n",
+    "        \n",
+    "    if ejer_1[i] != \"VW\":\n",
+    "        result.append(ejer_1[i])\n",
+    "        \n",
+    "    i = i + 1\n",
+    "\n",
+    "    print(result)\n",
+    "\n",
+    "print(\"\\nFin del bucle:\", result)"
+   ]
   },
   {
    "cell_type": "markdown",
